--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -14,22 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-04 Tue 13:14]
+#+CAPTION: Clock summary at [2016-10-04 Tue 14:13]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *56:13* |       |      | 100.0 |
+| *Total time*                                                                | *56:40* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 56:13   |       |      | 100.0 |
-| Active                                                                      |         | 56:13 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |   8.2 |
+| Stories                                                                     | 56:40   |       |      | 100.0 |
+| Active                                                                      |         | 56:40 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |   8.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.2 |
 | COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   4.4 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   0.6 |
 | COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   3.1 |
-| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   0.7 |
+| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   0.6 |
 | COMPLETED Add new index to formtter container                               |         |       | 0:19 |   0.6 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   1.5 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   1.4 |
 | COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   0.8 |
 | COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   1.1 |
 | COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   0.7 |
@@ -41,24 +41,25 @@
 | COMPLETED Investigate element annotation support                            |         |       | 2:05 |   3.7 |
 | CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   1.1 |
 | COMPLETED Create the formattables model                                     |         |       | 1:32 |   2.7 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   7.1 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   7.0 |
 | COMPLETED Remove empty context                                              |         |       | 1:09 |   2.0 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   6.6 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   6.5 |
 | COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   2.4 |
-| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  12.6 |
+| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  12.5 |
 | COMPLETED Add a banner to readme                                            |         |       | 1:29 |   2.6 |
 | COMPLETED Remove formatter group                                            |         |       | 0:23 |   0.7 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       | 0:15 |   0.4 |
 | CANCELLED Remove formatter id                                               |         |       | 0:04 |   0.1 |
 | COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   6.0 |
 | COMPLETED Remove =original_model_name=                                      |         |       | 0:16 |   0.5 |
-| COMPLETED Refactor code around model origination                            |         |       | 4:08 |   7.4 |
+| COMPLETED Refactor code around model origination                            |         |       | 4:08 |   7.3 |
 | COMPLETED Remove formatter level facet folders                              |         |       | 0:06 |   0.2 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       | 0:01 |   0.0 |
 | COMPLETED Expander refactor in =quilt.cpp=                                  |         |       | 3:03 |   5.4 |
-| COMPLETED Create the notion of a formatter alias                            |         |       | 3:15 |   5.8 |
+| COMPLETED Create the notion of a formatter alias                            |         |       | 3:15 |   5.7 |
+| STARTED Remove enabled formatters from formatter configuration              |         |       | 0:22 |   0.6 |
 | STARTED Generate formatter interfaces                                       |         |       | 0:19 |   0.6 |
-| STARTED Handle registration of services properly                            |         |       | 2:13 |   3.9 |
+| STARTED Handle registration of services properly                            |         |       | 2:18 |   4.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1031,6 +1032,12 @@ Other names:
 - canonical formatter
 - reference formatter
 
+*** STARTED Remove enabled formatters from formatter configuration    :story:
+    CLOCK: [2016-10-04 Tue 13:50]--[2016-10-04 Tue 14:12] =>  0:22
+
+We left some remnants of the legacy approach. Remove and tidy-up
+around this area.
+
 *** STARTED Generate formatter interfaces                              :epic:
     CLOCK: [2016-09-30 Fri 10:58]--[2016-09-30 Fri 11:17] =>  0:19
 
@@ -1217,6 +1224,20 @@ and if not, skip the type.
 
 Another way is to check if the type is generatable. If not, skip
 it. If we do it this way we need to wait for the generatable clean up.
+
+*** Order of headers is hard-coded                                    :story:
+
+In inclusion expander, we have hacked the sorting:
+
+:        // FIXME: hacks for headers that must be last
+:        const bool lhs_is_gregorian(
+:            lhs.find_first_of(boost_serialization_gregorian) != npos);
+:        const bool rhs_is_gregorian(
+:            rhs.find_first_of(boost_serialization_gregorian) != npos);
+:        if (lhs_is_gregorian && !rhs_is_gregorian)
+:            return true;
+
+This could be handled via meta-data, supplying some kind of flag (sort last?).
 
 *** Add the concept of hand-crafting                                  :story:
 
