--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-04 Tue 14:13]
+#+CAPTION: Clock summary at [2016-10-04 Tue 14:41]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *56:40* |       |      | 100.0 |
+| *Total time*                                                                | *57:00* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 56:40   |       |      | 100.0 |
-| Active                                                                      |         | 56:40 |      | 100.0 |
+| Stories                                                                     | 57:00   |       |      | 100.0 |
+| Active                                                                      |         | 57:00 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |   8.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.2 |
 | COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   4.4 |
@@ -44,8 +44,8 @@
 | COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   7.0 |
 | COMPLETED Remove empty context                                              |         |       | 1:09 |   2.0 |
 | COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   6.5 |
-| COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   2.4 |
-| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  12.5 |
+| COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   2.3 |
+| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  12.4 |
 | COMPLETED Add a banner to readme                                            |         |       | 1:29 |   2.6 |
 | COMPLETED Remove formatter group                                            |         |       | 0:23 |   0.7 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       | 0:15 |   0.4 |
@@ -59,7 +59,7 @@
 | COMPLETED Create the notion of a formatter alias                            |         |       | 3:15 |   5.7 |
 | STARTED Remove enabled formatters from formatter configuration              |         |       | 0:22 |   0.6 |
 | STARTED Generate formatter interfaces                                       |         |       | 0:19 |   0.6 |
-| STARTED Handle registration of services properly                            |         |       | 2:18 |   4.1 |
+| STARTED Handle registration of services properly                            |         |       | 2:38 |   4.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1175,6 +1175,7 @@ Further thoughts:
   because we still need formatter properties.
 
 *** STARTED Handle registration of services properly                  :story:
+    CLOCK: [2016-10-04 Tue 14:21]--[2016-10-04 Tue 14:41] =>  0:20
     CLOCK: [2016-10-04 Tue 13:15]--[2016-10-04 Tue 13:20] =>  0:05
     CLOCK: [2016-10-03 Mon 20:01]--[2016-10-03 Mon 20:08] =>  0:07
     CLOCK: [2016-10-03 Mon 17:55]--[2016-10-03 Mon 19:02] =>  1:07
