--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -14,15 +14,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-04 Tue 14:41]
+#+CAPTION: Clock summary at [2016-10-04 Tue 18:12]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *57:00* |       |      | 100.0 |
+| *Total time*                                                                | *57:22* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 57:00   |       |      | 100.0 |
-| Active                                                                      |         | 57:00 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |   8.1 |
+| Stories                                                                     | 57:22   |       |      | 100.0 |
+| Active                                                                      |         | 57:22 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |   8.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.2 |
 | COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   4.4 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   0.6 |
@@ -38,28 +38,28 @@
 | COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   2.5 |
 | COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   0.5 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   0.4 |
-| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   3.7 |
-| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   1.1 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   3.6 |
+| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   1.0 |
 | COMPLETED Create the formattables model                                     |         |       | 1:32 |   2.7 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   7.0 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   6.9 |
 | COMPLETED Remove empty context                                              |         |       | 1:09 |   2.0 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   6.5 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   6.4 |
 | COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   2.3 |
-| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  12.4 |
+| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  12.3 |
 | COMPLETED Add a banner to readme                                            |         |       | 1:29 |   2.6 |
 | COMPLETED Remove formatter group                                            |         |       | 0:23 |   0.7 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       | 0:15 |   0.4 |
 | CANCELLED Remove formatter id                                               |         |       | 0:04 |   0.1 |
-| COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   6.0 |
+| COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   5.9 |
 | COMPLETED Remove =original_model_name=                                      |         |       | 0:16 |   0.5 |
-| COMPLETED Refactor code around model origination                            |         |       | 4:08 |   7.3 |
+| COMPLETED Refactor code around model origination                            |         |       | 4:08 |   7.2 |
 | COMPLETED Remove formatter level facet folders                              |         |       | 0:06 |   0.2 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       | 0:01 |   0.0 |
-| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       | 3:03 |   5.4 |
+| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       | 3:03 |   5.3 |
 | COMPLETED Create the notion of a formatter alias                            |         |       | 3:15 |   5.7 |
-| STARTED Remove enabled formatters from formatter configuration              |         |       | 0:22 |   0.6 |
+| COMPLETED Remove enabled formatters from formatter configuration            |         |       | 0:22 |   0.6 |
 | STARTED Generate formatter interfaces                                       |         |       | 0:19 |   0.6 |
-| STARTED Handle registration of services properly                            |         |       | 2:38 |   4.6 |
+| STARTED Handle registration of services properly                            |         |       | 3:00 |   5.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1032,7 +1032,8 @@ Other names:
 - canonical formatter
 - reference formatter
 
-*** STARTED Remove enabled formatters from formatter configuration    :story:
+*** COMPLETED Remove enabled formatters from formatter configuration  :story:
+    CLOSED: [2016-10-04 Tue 17:56]
     CLOCK: [2016-10-04 Tue 13:50]--[2016-10-04 Tue 14:12] =>  0:22
 
 We left some remnants of the legacy approach. Remove and tidy-up
@@ -1175,6 +1176,7 @@ Further thoughts:
   because we still need formatter properties.
 
 *** STARTED Handle registration of services properly                  :story:
+    CLOCK: [2016-10-04 Tue 17:50]--[2016-10-04 Tue 18:12] =>  0:22
     CLOCK: [2016-10-04 Tue 14:21]--[2016-10-04 Tue 14:41] =>  0:20
     CLOCK: [2016-10-04 Tue 13:15]--[2016-10-04 Tue 13:20] =>  0:05
     CLOCK: [2016-10-03 Mon 20:01]--[2016-10-03 Mon 20:08] =>  0:07
