--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -14,21 +14,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-04 Tue 18:12]
+#+CAPTION: Clock summary at [2016-10-04 Tue 18:55]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *57:22* |       |      | 100.0 |
+| *Total time*                                                                | *58:03* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 57:22   |       |      | 100.0 |
-| Active                                                                      |         | 57:22 |      | 100.0 |
+| Stories                                                                     | 58:03   |       |      | 100.0 |
+| Active                                                                      |         | 58:03 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |   8.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.2 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   4.4 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   4.3 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   0.6 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   3.1 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   3.0 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   0.6 |
-| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   0.6 |
+| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   0.5 |
 | COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   1.4 |
 | COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   0.8 |
 | COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   1.1 |
@@ -40,26 +40,26 @@
 | COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   0.4 |
 | COMPLETED Investigate element annotation support                            |         |       | 2:05 |   3.6 |
 | CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   1.0 |
-| COMPLETED Create the formattables model                                     |         |       | 1:32 |   2.7 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   6.9 |
+| COMPLETED Create the formattables model                                     |         |       | 1:32 |   2.6 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   6.8 |
 | COMPLETED Remove empty context                                              |         |       | 1:09 |   2.0 |
 | COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   6.4 |
 | COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   2.3 |
-| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  12.3 |
+| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  12.2 |
 | COMPLETED Add a banner to readme                                            |         |       | 1:29 |   2.6 |
 | COMPLETED Remove formatter group                                            |         |       | 0:23 |   0.7 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       | 0:15 |   0.4 |
 | CANCELLED Remove formatter id                                               |         |       | 0:04 |   0.1 |
 | COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   5.9 |
 | COMPLETED Remove =original_model_name=                                      |         |       | 0:16 |   0.5 |
-| COMPLETED Refactor code around model origination                            |         |       | 4:08 |   7.2 |
+| COMPLETED Refactor code around model origination                            |         |       | 4:08 |   7.1 |
 | COMPLETED Remove formatter level facet folders                              |         |       | 0:06 |   0.2 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       | 0:01 |   0.0 |
 | COMPLETED Expander refactor in =quilt.cpp=                                  |         |       | 3:03 |   5.3 |
-| COMPLETED Create the notion of a formatter alias                            |         |       | 3:15 |   5.7 |
+| COMPLETED Create the notion of a formatter alias                            |         |       | 3:15 |   5.6 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       | 0:22 |   0.6 |
-| STARTED Generate formatter interfaces                                       |         |       | 0:19 |   0.6 |
-| STARTED Handle registration of services properly                            |         |       | 3:00 |   5.2 |
+| COMPLETED Handle registration of services properly                          |         |       | 3:41 |   6.3 |
+| STARTED Generate formatter interfaces                                       |         |       | 0:19 |   0.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1039,6 +1039,62 @@ Other names:
 We left some remnants of the legacy approach. Remove and tidy-up
 around this area.
 
+*** COMPLETED Handle registration of services properly                :story:
+    CLOSED: [2016-10-04 Tue 18:55]
+    CLOCK: [2016-10-04 Tue 18:53]--[2016-10-04 Tue 18:55] =>  0:01
+    CLOCK: [2016-10-04 Tue 18:13]--[2016-10-04 Tue 18:52] =>  0:39
+    CLOCK: [2016-10-04 Tue 17:50]--[2016-10-04 Tue 18:12] =>  0:22
+    CLOCK: [2016-10-04 Tue 14:21]--[2016-10-04 Tue 14:41] =>  0:20
+    CLOCK: [2016-10-04 Tue 13:15]--[2016-10-04 Tue 13:20] =>  0:05
+    CLOCK: [2016-10-03 Mon 20:01]--[2016-10-03 Mon 20:08] =>  0:07
+    CLOCK: [2016-10-03 Mon 17:55]--[2016-10-03 Mon 19:02] =>  1:07
+    CLOCK: [2016-10-03 Mon 16:07]--[2016-10-03 Mon 16:39] =>  0:32
+    CLOCK: [2016-10-03 Mon 15:44]--[2016-10-03 Mon 15:58] =>  0:14
+    CLOCK: [2016-10-03 Mon 15:31]--[2016-10-03 Mon 15:44] =>  0:13
+
+The only way to do this is to filter the list of leaves by enabled
+formatters. We need a container of enabled formatters by element id at
+the formattable model level.
+
+Problems:
+
+- we need to be able to cope with lookups by facet id, e.g. is odb
+  facet enabled? I don't necessarily have a qname or if I do, it may
+  not have all of the formatters required (e.g. cmakelists).
+- we need to be able to cope with lookups by canonical formatter name,
+  e.g. I have included name x in types but I don't know what formatter
+  it corresponds to.
+
+Both of these problems have been addressed on their own stories. We
+can now tackle leaves.
+
+Tasks:
+
+- change context to have the entire formattables model; setup the
+  resolver and use it in is formatter name enabled.
+- use the resolver to check if each leaf is enabled for serialisation
+  using the canonical formatter. This can be a helper method in
+  assistant.
+
+*Previous Understanding*
+
+We need a flag to determine if a class should contribute its leaves or
+not. By default, if it is hand-crafted it does not contribute
+leaves. This could (eventually) be overridable by users.
+
+*Previous Understanding*
+
+We need a way to determine if a type which is part of a generalisation
+should be added to the registrar or not. In =generalisation_indexer=:
+
+:     // FIXME: massive hack. must not add leafs for services.
+
+One way would be to check if serialisation is enabled for that type
+and if not, skip the type.
+
+Another way is to check if the type is generatable. If not, skip
+it. If we do it this way we need to wait for the generatable clean up.
+
 *** STARTED Generate formatter interfaces                              :epic:
     CLOCK: [2016-09-30 Fri 10:58]--[2016-09-30 Fri 11:17] =>  0:19
 
@@ -1174,59 +1230,6 @@ Further thoughts:
   instantiates stitch (probably within quilt) with the parameters and
   generates the file. Actually we probably can't have this in quilt
   because we still need formatter properties.
-
-*** STARTED Handle registration of services properly                  :story:
-    CLOCK: [2016-10-04 Tue 17:50]--[2016-10-04 Tue 18:12] =>  0:22
-    CLOCK: [2016-10-04 Tue 14:21]--[2016-10-04 Tue 14:41] =>  0:20
-    CLOCK: [2016-10-04 Tue 13:15]--[2016-10-04 Tue 13:20] =>  0:05
-    CLOCK: [2016-10-03 Mon 20:01]--[2016-10-03 Mon 20:08] =>  0:07
-    CLOCK: [2016-10-03 Mon 17:55]--[2016-10-03 Mon 19:02] =>  1:07
-    CLOCK: [2016-10-03 Mon 16:07]--[2016-10-03 Mon 16:39] =>  0:32
-    CLOCK: [2016-10-03 Mon 15:44]--[2016-10-03 Mon 15:58] =>  0:14
-    CLOCK: [2016-10-03 Mon 15:31]--[2016-10-03 Mon 15:44] =>  0:13
-
-The only way to do this is to filter the list of leaves by enabled
-formatters. We need a container of enabled formatters by element id at
-the formattable model level.
-
-Problems:
-
-- we need to be able to cope with lookups by facet id, e.g. is odb
-  facet enabled? I don't necessarily have a qname or if I do, it may
-  not have all of the formatters required (e.g. cmakelists).
-- we need to be able to cope with lookups by canonical formatter name,
-  e.g. I have included name x in types but I don't know what formatter
-  it corresponds to.
-
-Both of these problems have been addressed on their own stories. We
-can now tackle leaves.
-
-Tasks:
-
-- change context to have the entire formattables model; setup the
-  resolver and use it in is formatter name enabled.
-- use the resolver to check if each leaf is enabled for serialisation
-  using the canonical formatter. This can be a helper method in
-  assistant.
-
-*Previous Understanding*
-
-We need a flag to determine if a class should contribute its leaves or
-not. By default, if it is hand-crafted it does not contribute
-leaves. This could (eventually) be overridable by users.
-
-*Previous Understanding*
-
-We need a way to determine if a type which is part of a generalisation
-should be added to the registrar or not. In =generalisation_indexer=:
-
-:     // FIXME: massive hack. must not add leafs for services.
-
-One way would be to check if serialisation is enabled for that type
-and if not, skip the type.
-
-Another way is to check if the type is generatable. If not, skip
-it. If we do it this way we need to wait for the generatable clean up.
 
 *** Order of headers is hard-coded                                    :story:
 
